// Dựa trên TourTypeDto của backend
export interface TourType {
    tourTypeID: string;
    nameType: string;
}

